# rust-react-ssr

./: Cargo.toml  README.md  package.json  rustyroad.toml
client/: deno.json  package.json  tsconfig.json  vite.config.mts  vite.config.ts  webpack.config.js  webpack.prod.js
react-ssr-example/: package-lock.json  package.json  webpack.server.js
react-ssr-example/src/: App.js  Home.js  index.jsx  ssr.js
src/: main.rs
src/routes/: dashboard.rs  index.rs  login.rs  mod.rs
